crates/qwik-optimizer-oxc/tests/snapshots/example_default_export.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { sibling } from "./sibling";

export default component$(() => {
  return <div onClick$={() => console.log(mongodb, sibling)}></div>;
});

=== src/routes/_repl/[id]/[[...slug]].js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./[[...slug]].tsx_slug_component_XXXXXXXXXXXX.js");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "slug_component_XXXXXXXXXXXX"),
);

=== src/routes/_repl/[id]/[[...slug]].tsx_slug_component_XXXXXXXXXXXX.js ===
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./[[...slug]].tsx_slug_component_div_q_e_click_XXXXXXXXXXXX.js");
export const slug_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "slug_component_div_q_e_click_XXXXXXXXXXXX"),
    },
    null,
    3,
    "W4_0",
  );
};

/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "slug_component_XXXXXXXXXXXX",
  "entry": "src/routes/_repl/[id]/[[...slug]].tsx_entry_[[...slug]]",
  "displayName": "[[...slug]].tsx_slug_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "[[...slug]].tsx_slug_component_XXXXXXXXXXXX",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== src/routes/_repl/[id]/[[...slug]].tsx_slug_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { sibling } from "./sibling";
export const slug_component_div_q_e_click_XXXXXXXXXXXX = () => console.log(mongodb, sibling);

/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "slug_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "[[...slug]].tsx_slug_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "[[...slug]].tsx_slug_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": "slug_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
