crates/qwik-optimizer-oxc/tests/snapshots/example_default_export_invalid_ident.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export default component$(() => {
  return <div onClick$={() => console.log(mongodb)}></div>;
});

=== src/components/mongo/404.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./404.tsx__404_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "_404_component_XXXXXXXXXXXX"),
);

=== src/components/mongo/404.tsx__404_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./404.tsx__404_component_div_q_e_click_XXXXXXXXXXXX");
export const _404_component_XXXXXXXXXXXX = () => {
  return (
    <div
      q-e:click={/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "_404_component_div_q_e_click_XXXXXXXXXXXX")}
    ></div>
  );
};

/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "404.tsx__404_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "404.tsx__404_component_XXXXXXXXXXXX",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== src/components/mongo/404.tsx__404_component_div_q_e_click_XXXXXXXXXXXX.tsx === (ENTRY)
export const _404_component_div_q_e_click_XXXXXXXXXXXX = () => console.log(mongodb);

/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "404.tsx__404_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "404.tsx__404_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": "_404_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
