crates/qwik-optimizer-oxc/tests/snapshots/example_dev_mode_inlined.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$(() => {
  return (
    <Cmp>
      <p class="stuff" onClick$={() => console.log("warn")}>
        Hello Qwik
      </p>
    </Cmp>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrlDEV } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrlDEV(
    () => {
      return /* @__PURE__ */ _jsxSorted(
        Cmp,
        null,
        null,
        /* @__PURE__ */ _jsxSorted(
          "p",
          null,
          {
            class: "stuff",
            "q-e:click": /* @__PURE__ */ inlinedQrlDEV(
              () => console.log("warn"),
              "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4",
              {
                file: "/user/qwik/src/test.tsx",
                lo: 149,
                hi: 174,
                displayName: "test.tsx_App_component_Cmp_p_q_e_click",
              },
            ),
          },
          "Hello Qwik",
          3,
          null,
          {
            fileName: "test.tsx",
            lineNumber: 6,
            columnNumber: 7,
          },
        ),
        3,
        "u6_0",
        {
          fileName: "test.tsx",
          lineNumber: 5,
          columnNumber: 5,
        },
      );
    },
    "App_component_ckEPmXZlub0",
    {
      file: "/user/qwik/src/test.tsx",
      lo: 87,
      hi: 224,
      displayName: "test.tsx_App_component",
    },
  ),
);

=== DIAGNOSTICS ===

[]
