crates/qwik-optimizer-oxc/tests/snapshots/example_explicit_ext_no_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, $, useStyles$ } from "@qwik.dev/core";

export const App = component$((props) => {
  useStyles$("hola");
  return $(() => <div></div>);
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX.tsx");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.tsx ===
import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_useStyles_XXXXXXXXXXXX.tsx");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_1_XXXXXXXXXXXX.tsx");
export const App_component_XXXXXXXXXXXX = (props) => {
  useStylesQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_useStyles_XXXXXXXXXXXX"));
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_1_XXXXXXXXXXXX");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_App_component_useStyles_XXXXXXXXXXXX.tsx ===
export const App_component_useStyles_XXXXXXXXXXXX = "hola";

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/

=== test.tsx_App_component_1_XXXXXXXXXXXX.tsx ===
export const App_component_1_XXXXXXXXXXXX = () => <div></div>;

/*
{
  "origin": "test.tsx",
  "name": "App_component_1_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
